--- a/ansible/roles/hypervisor/templates/edge.ks.j2
+++ b/ansible/roles/hypervisor/templates/edge.ks.j2
@@ -29,7 +29,8 @@ user --name=core --groups=wheel --password=edge --homedir=/var/home/core
 # set up the OSTree-based install with disabled GPG key verification, the base
 # URL to pull the installation content, 'rhel' as the management root in the
 # repo, and 'rhel/8/x86_64/edge' as the branch for the installation
-ostreesetup --nogpg --url=http://{{ groups['rhelserver'][0] }}/ostree/repo/ --osname=rhel --remote=edge --ref=rhel/8/x86_64/edge
+#ostreesetup --nogpg --url=http://{{ groups['rhelserver'][0] }}/ostree/repo/ --osname=rhel --remote=edge --ref=rhel/8/x86_64/edge
+ostreesetup --nogpg --url=http://192.168.122.1/ostree/repo/ --osname=rhel --remote=edge --ref=rhel/8/x86_64/edge
 
 # reboot after installation is successfully completed
 reboot --eject
