--- a/ansible/roles/hypervisor/templates/edge.ks.j2
+++ b/ansible/roles/hypervisor/templates/edge.ks.j2
@@ -94,7 +94,7 @@ systemctl enable rpm-ostreed-automatic.timer applyupdate.timer
 
 cat > /etc/containers/registries.conf <<EOF
 [registries.search]
-registries = ['registry.access.redhat.com', 'registry.redhat.io', 'docker.io']
+registries = ['quay.io', 'registry.access.redhat.com', 'registry.redhat.io', 'docker.io']
 [registries.insecure]
 registries = ['{{ groups['rhelserver'][0] }}:5000']
 [registries.block]
@@ -152,6 +152,9 @@ cat > /var/home/core/.config/systemd/user/container-httpd.service <<EOF
 [Unit]
 Description=Podman container-httpd.service
 Documentation=man:podman-generate-systemd(1)
+Wants=network-online.target
+After=network-online.target
+RequiresMountsFor=%t/containers
 StopWhenUnneeded=true
 
 [Service]
@@ -159,12 +162,14 @@ Environment=PODMAN_SYSTEMD_UNIT=%n
 Restart=on-failure
 TimeoutStopSec=70
 ExecStartPre=/bin/rm -f %t/container-httpd.pid %t/container-httpd.ctr-id
-ExecStart=/usr/bin/podman run --conmon-pidfile %t/container-httpd.pid --cidfile %t/container-httpd.ctr-id --cgroups=no-conmon --replace -d --label io.containers.autoupdate=image --name httpd -p 127.0.0.1:8080:80 {{ groups['rhelserver'][0] }}:5000/httpd:prod
-ExecStartPost=/bin/sleep 1
-ExecStop=/usr/bin/podman stop --ignore --cidfile %t/container-httpd.ctr-id -t 10
-ExecStopPost=/usr/bin/podman rm --ignore -f --cidfile %t/container-httpd.ctr-id
-PIDFile=%t/container-httpd.pid
-Type=forking
+ExecStart=/usr/bin/podman run --conmon-pidfile %t/container-httpd.pid --cidfile %t/container-httpd.ctr-id --cgroups=no-conmon --replace -d --label io.containers.autoupdate=image --name httpd -p 127.0.0.1:8080:8081 {{ container_app }}
+ExecStop=/usr/bin/podman stop --ignore --cidfile=%t/%n.ctr-id
+ExecStopPost=/usr/bin/podman rm -f --ignore --cidfile=%t/%n.ctr-id
+Type=notify
+NotifyAccess=all
+
+[Install]
+WantedBy=default.target
 EOF
 
 ##
@@ -218,7 +223,7 @@ EOF
 cat > /var/home/core/.config/systemd/user/pre-pull-container-image.service <<EOF
 [Service]
 Type=oneshot
-ExecStart=podman pull {{ groups['rhelserver'][0] }}:5000/httpd:prod
+ExecStart=podman pull {{ container_app }}
 
 [Install]
 WantedBy=multi-user.target default.target
