--- a/ansible/roles/hypervisor/templates/edge.ks.j2
+++ b/ansible/roles/hypervisor/templates/edge.ks.j2
@@ -20,7 +20,7 @@ autopart --type=plain --fstype=xfs --nohome
 text
 
 # activate network devices and configure with static ip
-network --bootproto=static --ip={{ rheledge_ip }} --netmask={{ rheledge_netmask }} --gateway={{ rheledge_gw }} --nameserver={{ rheledge_dns}} --hostname={{ rheledge_hostname }} --noipv6
+network --bootproto=static --ip={{ rheledge_ip }} --netmask={{ rheledge_netmask }} --gateway={{ rheledge_gw }} --nameserver={{ rheledge_dns }} --hostname={{ rheledge_hostname }} --noipv6
 
 # Kickstart requires that we create default user 'core' with sudo
 # privileges using password 'edge'
@@ -29,8 +29,7 @@ user --name=core --groups=wheel --password=edge --homedir=/var/home/core
 # set up the OSTree-based install with disabled GPG key verification, the base
 # URL to pull the installation content, 'rhel' as the management root in the
 # repo, and 'rhel/8/x86_64/edge' as the branch for the installation
-#ostreesetup --nogpg --url=http://{{ groups['rhelserver'][0] }}/ostree/repo/ --osname=rhel --remote=edge --ref=rhel/8/x86_64/edge
-ostreesetup --nogpg --url=http://192.168.122.1/ostree/repo/ --osname=rhel --remote=edge --ref=rhel/8/x86_64/edge
+ostreesetup --nogpg --url=http://{{ groups['rhelserver'][0] }}/ostree/repo/ --osname=rhel --remote=edge --ref=rhel/8/x86_64/edge
 
 # reboot after installation is successfully completed
 reboot --eject
